Project

General

Profile

Actions

Bug #64490

open

mds: some request errors come from errno.h rather than fs_types.h

Added by Patrick Donnelly 2 months ago. Updated about 1 month ago.

Status:
Pending Backport
Priority:
High
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
backport_processed
Backport:
squid,reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

(See future PR for where.)


Related issues 2 (2 open0 closed)

Copied to CephFS - Backport #65274: reef: mds: some request errors come from errno.h rather than fs_types.hIn ProgressPatrick DonnellyActions
Copied to CephFS - Backport #65275: squid: mds: some request errors come from errno.h rather than fs_types.hIn ProgressPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly 2 months ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 55647
Actions #2

Updated by Patrick Donnelly about 1 month ago

  • Category set to Correctness/Safety
  • Status changed from Fix Under Review to Pending Backport
  • Source set to Development
  • Backport changed from reef,quincy to squid,reef
Actions #3

Updated by Backport Bot about 1 month ago

  • Copied to Backport #65274: reef: mds: some request errors come from errno.h rather than fs_types.h added
Actions #4

Updated by Backport Bot about 1 month ago

  • Copied to Backport #65275: squid: mds: some request errors come from errno.h rather than fs_types.h added
Actions #5

Updated by Backport Bot about 1 month ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF