mds: use cephfs errno for fragment size check

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
Fixes: https://tracker.ceph.com/issues/64490
(cherry picked from commit 06d6f4b9113ae32969eab29d9c432e74a8f1053a)